<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_margin="40dp">


        <!-- Table Heading Name-->

        <TableRow
            android:background="@color/design_default_color_primary_dark">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cName"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="left"
                />
        </TableRow>

        <!-- Table Data Name-->

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rName"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Table Heading Education -->

        <TableRow
            android:background="@color/design_default_color_primary_dark">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cEducation"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="left"
                />
        </TableRow>

        <!-- Table Data Education -->

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rEd1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rEd1_1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="right"
                />
        </TableRow>

        <!-- Table Heading TechnicalSkills -->

        <TableRow
            android:background="@color/design_default_color_primary_dark">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cTechSkill"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="left"
                />
        </TableRow>

        <!-- Table Data Technical Skills -->

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rTechSkills1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rTechSkills2"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rTechSkills3"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rTechSkills4"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
        </TableRow>



        <!-- Table Heading Extra Courses -->

        <TableRow
            android:background="@color/design_default_color_primary_dark">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cExtra"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="left"
                />
        </TableRow>

        <!-- Table Data Extra Courses -->

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rExtra1"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rExtra2"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />
        </TableRow>


        <!--You can use the same method to add more rows as per your needs-->

    </TableLayout>

</RelativeLayout>